# apitest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api_speed_test.cpp  api_speed_test.sln  api_speed_test.vcxproj  api_speed_test.vcxproj.filters  console.cpp  console.h  cubes_gl_bindless.cpp  cubes_gl_bindless.h  cubes_gl_bindless_fs.glsl  cubes_gl_bindless_indirect.cpp  cubes_gl_bindless_indirect.h  cubes_gl_bindless_indirect_vs.glsl  cubes_gl_buffer_range.cpp  cubes_gl_buffer_range.h  cubes_gl_buffer_storage.cpp  cubes_gl_buffer_storage.h  cubes_gl_dynamic_buffer.cpp  cubes_gl_dynamic_buffer.h  cubes_gl_dynamic_buffer_vs.glsl  cubes_gl_multi_draw.cpp  cubes_gl_multi_draw.h  cubes_gl_multi_draw_vs.glsl  cubes_gl_tex_coord.cpp  cubes_gl_tex_coord.h  cubes_gl_tex_coord_vs.glsl  cubes_gl_uniform.cpp  cubes_gl_uniform.h  cubes_gl_uniform_vs.glsl  dds_helper.h  gfx.h  gfx_dx11.cpp  gfx_dx11.h  gfx_gl.cpp  gfx_gl.h  gl4_fs_code.h  gl4_vs_code.h  (+34 more)
GL/: glcorearb.h  glext.h
Media/tex/: Mandelbrot.dds
src/: CMakeLists.txt  api_speed_test.cpp  console.cpp  cubes_gl_bindless.cpp  cubes_gl_bindless.h  cubes_gl_bindless_indirect.cpp  cubes_gl_bindless_indirect.h  cubes_gl_buffer_range.cpp  cubes_gl_buffer_range.h  cubes_gl_buffer_storage.cpp  cubes_gl_buffer_storage.h  cubes_gl_dynamic_buffer.cpp  cubes_gl_dynamic_buffer.h  cubes_gl_multi_draw.cpp  cubes_gl_multi_draw.h  cubes_gl_tex_coord.cpp  cubes_gl_tex_coord.h  cubes_gl_uniform.cpp  cubes_gl_uniform.h  gfx.h  gfx_dx11.cpp  gfx_dx11.h  gfx_gl.cpp  gfx_gl.h  mathlib.h  pch.h  sparse_bindless_texarray.cpp  sparse_bindless_texarray.h  streaming_vb_dx11.cpp  streaming_vb_dx11.h  streaming_vb_dx11_ps.h  streaming_vb_dx11_vs.h  streaming_vb_gl.cpp  streaming_vb_gl.h  textures_gl_bindless.cpp  textures_gl_bindless_multidraw.cpp  textures_gl_forward.cpp  textures_gl_forward.h  textures_gl_notex.cpp  textures_gl_notex.h  (+7 more)
src/GL/: glcorearb.h  glextensions.cpp  glextensions.h  glextensions.inl
src/framework/: apitest.cpp  appstate.cpp  appstate.h  buffer.cpp  buffer.h  bufferlock.cpp  bufferlock.h  console.cpp  console.h  dds_helper.h  factory.cpp  factory.h  gfx.h  gfx_dx11.cpp  gfx_dx11.h  gfx_gl.cpp  gfx_gl.h  mathlib.h  options.cpp  options.h  os.cpp  os.h  sparse_bindless_texarray.cpp  sparse_bindless_texarray.h  wgl.cpp
src/problems/: dynamicstreaming.cpp  dynamicstreaming.h  null.cpp  null.h  problem.cpp  problem.h  texturedquads.cpp  texturedquads.h  untexturedobjects.cpp  untexturedobjects.h
src/solutions/: dynamicstreamingsoln.cpp  dynamicstreamingsoln.h  nullsoln.cpp  nullsoln.h  solution.h  texturedquadssoln.cpp  texturedquadssoln.h  untexturedobjectssoln.cpp  untexturedobjectssoln.h
src/solutions/dynamicstreaming/d3d11/: mapnooverwrite.cpp  mapnooverwrite.h  updatesubresource.cpp  updatesubresource.h
src/solutions/dynamicstreaming/gl/: buffersubdata.cpp  buffersubdata.h  dynamic.cpp  dynamic.h  dynamicmap.cpp  dynamicmap.h  mappersistent.cpp  mappersistent.h  mapunsynchronized.cpp  mapunsynchronized.h  persistent.cpp  persistent.h
src/solutions/texturedquads/: bindlessmultidraw.h  sparsebindlesstexturearray.h
src/solutions/texturedquads/d3d11/: naive.cpp  naive.h
src/solutions/texturedquads/gl/: bindless.cpp  bindless.h  bindlessmultidraw.cpp  bindlessmultidraw.h  naive.cpp  naive.h  naiveuniform.cpp  naiveuniform.h  notex.cpp  notex.h  notexuniform.cpp  notexuniform.h  sparsebindlesstexturearray.cpp  sparsebindlesstexturearray.h  sparsebindlesstexturearraymultidraw.cpp  sparsebindlesstexturearraymultidraw.h  texturearray.cpp  texturearray.h  texturearraymultidraw.cpp  texturearraymultidraw.h  texturearraymultidrawbuffer.cpp  texturearraymultidrawbuffer.h  texturearrayuniform.cpp  texturearrayuniform.h
src/solutions/untexturedobjects/d3d11/: naive.cpp  naive.h
src/solutions/untexturedobjects/gl/: bindless.cpp  bindless.h  bindlessindirect.cpp  bindlessindirect.h  bufferrange.cpp  bufferrange.h  bufferstorage.cpp  bufferstorage.h  drawloop.cpp  drawloop.h  dynamicbuffer.cpp  dynamicbuffer.h  mappersistent.cpp  mappersistent.h  mapunsynchronized.cpp  mapunsynchronized.h  multidraw.cpp  multidraw.h  multidrawbuffer.cpp  multidrawbuffer.h  texcoord.cpp  texcoord.h  uniform.cpp  uniform.h
src/solutions/untexturexobjects/gl/: bindless.cpp  bindless.h  multidraw.cpp  multidraw.h
